--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,12 @@ aws-cdk-lib==2.77.0
     #   -r requirements.in
     #   aws-cdk-aws-apigatewayv2-alpha
     #   aws-cdk-aws-apigatewayv2-integrations-alpha
+black==23.3.0
+    # via -r requirements.in
 cattrs==22.2.0
     # via jsii
+click==8.1.3
+    # via black
 constructs==10.2.8
     # via
     #   -r requirements.in
@@ -46,6 +50,14 @@ jsii==1.80.0
     #   aws-cdk-aws-apigatewayv2-integrations-alpha
     #   aws-cdk-lib
     #   constructs
+mypy-extensions==1.0.0
+    # via black
+packaging==23.1
+    # via black
+pathspec==0.11.1
+    # via black
+platformdirs==3.5.0
+    # via black
 publication==0.0.3
     # via
     #   aws-cdk-asset-awscli-v1
@@ -60,6 +72,8 @@ python-dateutil==2.8.2
     # via jsii
 six==1.16.0
     # via python-dateutil
+tomli==2.0.1
+    # via black
 typeguard==2.13.3
     # via
     #   aws-cdk-asset-awscli-v1
@@ -71,6 +85,8 @@ typeguard==2.13.3
     #   constructs
     #   jsii
 typing-extensions==4.5.0
-    # via jsii
+    # via
+    #   black
+    #   jsii
 zipp==3.15.0
     # via importlib-resources
